# md2pdf

./: .gitignore  README.md  pyproject.toml
src/md2pdf/: __init__.py  cli.py  core.py
src/md2pdf/templates/: onboarding.css  plain.css
